html/css home page with blocks and carousels

--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,49 @@
+<header>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top mask-custom shadow-0 py-3">
+    <div class="container ">
+      <!-- Brand -->
+      <a class="navbar-brand" href="#">
+        <img src="https://cdn-icons-png.flaticon.com/512/3194/3194766.png" alt="" width="37" height="37" class="d-inline-block align-top">
+        <span  style="color: #F2CEE4;">Fruit</span>
+        <span  style="color: #E8DCB9;">Stack</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <!-- Pages -->
+        <ul class="navbar-nav navbar-font me-auto" style="">
+          <li class="nav-item">
+            <a class="nav-link active" style="color: azure; " aria-current="page" routerLink="/home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="opacity: 90%" href="#">Fruits</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link" style="opacity: 70%" href="#">About</a>
+          </li>
+        </ul>
+        <!-- Icons -->
+        <ul class="navbar-nav d-flex flex-row">
+          <li class="nav-item me-3 me-lg-0">
+            <a class="nav-link" href="https://github.com/ChaklunIvan" target="_blank">
+              <i class="bi bi-github"></i>
+            </a>
+          </li>
+          <li class="nav-item me-3 me-lg-0">
+            <a class="nav-link" href="https://www.linkedin.com/in/chaklunivan/" target="_blank">
+              <i class="bi bi-linkedin"></i>
+            </a>
+          </li>
+          <li class="nav-item me-3 me-lg-0">
+            <a class="nav-link" href="https://t.me/ChaklunIvan" target="_blank">
+              <i class="bi bi-telegram"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
 <router-outlet></router-outlet>
