--- a/ui/src/app/components/home/home.component.css
+++ b/ui/src/app/components/home/home.component.css
@@ -19,7 +19,9 @@ p{
   width: 100%;
   height: 100vh;
   object-fit: cover;
-  scale: 0.5;
+  scale: 0.7;
 }
 
-
+.img-hover:hover{
+  scale: 1.2;
+}
