--- a/ui/src/app/components/home/home.component.css
+++ b/ui/src/app/components/home/home.component.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100vh;
   object-fit: cover;
+  cursor: pointer;
 }
 
 h3{
@@ -20,6 +21,7 @@ p{
   height: 100vh;
   object-fit: cover;
   scale: 0.7;
+  cursor: pointer;
 }
 
 .img-hover:hover{
