--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -15,10 +15,10 @@
         <!-- Pages -->
         <ul class="navbar-nav navbar-font me-auto" style="">
           <li class="nav-item">
-            <a class="nav-link active" style="color: azure; " aria-current="page" routerLink="/home">Home</a>
+            <a class="nav-link active" style="color: azure;" aria-current="page" routerLink="/home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="opacity: 90%" href="#">Fruits</a>
+            <a class="nav-link" style="opacity: 90%" href="/fruit-list">Fruits</a>
           </li>
           <li class="nav-item ">
             <a class="nav-link" style="opacity: 70%" href="#">About</a>
