--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <!-- Carousel -->
 <ngb-carousel [interval]="3500" [pauseOnFocus]="true" [pauseOnHover]="false" >
   <ng-template ngbSlide>
