--- a/ui/src/app/components/fruit-list/fruit-list.component.html
+++ b/ui/src/app/components/fruit-list/fruit-list.component.html
@@ -1,26 +1,61 @@
 <app-navbar></app-navbar>
+
 <div class="container-fluid" style="background: teal">
   <div class="container">
+
+<!-- Spinner loader -->
+    <div *ngIf="this.getLoading()" class="cssload-container">
+      <div class="cssload-speeding-wheel"></div>
+    </div>
+<!--Toast on error-->
+    <div *ngIf="this.getToast()" class="d-flex justify-content-center" style="margin-top: 100px">
+      <ngb-toast style="text-align: center; color:  teal; font-size: 28px; font-family: 'Courier New'" [autohide]="false">
+        Oops... <br>
+        Something vent wrong
+        <i class="bi bi-exclamation-octagon"></i>
+      </ngb-toast>
+    </div>
+
+
+<!--Card grid-->
     <div class="row row-cols-md-5 g-4" style="margin-top: 100px">
-<!--      <div class="col-md" *ngFor="let fruit of fruits | paginate: {currentPage: this.currentPage,-->
-<!--                                                                        itemsPerPage: this.pageSize,-->
-<!--                                                                        totalItems: this.totalCount}">-->
         <div class="col-md" *ngFor="let fruit of fruits">
         <div class="card">
           <img [src]="fruit.imageUrls[0]" class="card-img-top center-cropped-card" alt="Skyscrapers"/>
           <div class="card-body">
-            <h5 class="card-title">{{fruit.name}}</h5>
-            <p class="card-text">
-              {{fruit.family}}
-            </p>
+
+            <h5 class="card-title" style="color: grey; font-family: 'Segoe UI Symbol';">{{fruit.name}}</h5>
+
+            <div class="d-md-flex justify-content-md-end">
+              <button type="button" class="btn" (click)="openVerticallyCentered(content)"><i class="bi bi-info-circle"></i></button>
+            </div>
+
+            <ng-template #content let-modal>
+              <div class="modal-header">
+                <h4 class="modal-title">Nutritions on 100g</h4>
+                <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+              </div>
+              <div class="modal-body">
+                <p>Calories: {{fruit.nutritions.calories}}<br>
+                   Carbohydrates: {{fruit.nutritions.carbohydrates}}<br>
+                   Fat: {{fruit.nutritions.fat}}<br>
+                   Protein: {{fruit.nutritions.protein}}<br>
+                   Sugar: {{fruit.nutritions.sugar}}</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+              </div>
+            </ng-template>
+
           </div>
         </div>
       </div>
     </div>
 
 
-    <ngb-pagination class="d-flex justify-content-center my-5" [collectionSize]="totalCount" [(page)]="currentPage" aria-label="Custom pagination" (pageChange)="getFruits()">
-      <ng-template ngbPaginationPrevious>Prev</ng-template>
+<!--Pagination-->
+    <ngb-pagination *ngIf="getPagination()" style="margin-top: 52px" class="d-flex justify-content-center" [collectionSize]="totalCount" [(page)]="currentPage" aria-label="Custom pagination" (pageChange)="getFruits()">
+      <ng-template ngbPaginationPrevious >Prev</ng-template>
       <ng-template ngbPaginationNext>Next</ng-template>
     </ngb-pagination>
 
