--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -22,7 +22,7 @@
   </ng-template>
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-      <img class="center-cropped" src="./assets/images/homecarousel_durian.png" alt="Random third slide" routerLink=""/>
+      <img class="center-cropped" src="./assets/images/homecarousel_durian.png" alt="Random third slide" routerLink="/about"/>
     </div>
     <div class="carousel-caption">
       <h3>About</h3>
