--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -21,7 +21,7 @@
             <a class="nav-link" style="opacity: 90%" href="/fruit-list">Fruits</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" style="opacity: 70%" href="#">About</a>
+            <a class="nav-link" style="opacity: 70%" href="/about">About</a>
           </li>
         </ul>
         <!-- Icons -->
